<resources>
    <string name="app_name">Testfor_cnc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="shareprefence">shareprefence</string>
    <string name="save_shareprefence">save shareprefence</string>
    <string name="read_shareprefence">read shareprefence</string>
    <string name="sort_shareprefence">sort shareprefence</string>
    <string name="show_data">show_data</string>

    <string name="file">file</string>
    <string name="read_file">read_file</string>
    <string name="write_file">write_file</string>

    <string name="json">json</string>
    <string name="write_json">write_json</string>
    <string name="read_json">read_json</string>
    <string name="xml">xml</string>
    <string name="read_xml">read xml</string>
    <string name="write_xml">write xml</string>

    <string name="sqlite">sqlite</string>
    <string name="create_database">create database</string>
    <string name="insert_data">insert data</string>
    <string name="query_data">query data</string>

    <string name="content_provider">content provider</string>
    <string name="read_content_provider">read contract</string>
    <string name="read_msm">read message</string>

    <string name="service">service</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>

    <string name="reflection">reflection</string>
    <string name="fragment">fragment</string>
    <string name="timer">timer</string>
    <string name="picture">picture</string>
    <string name="dialog">dialog</string>
    <string name="check_id">check_id</string>
    <string name="scoller_city">scoller_city</string>
    <string name="slidingmenu">slidingmenu</string>
    <string name="check_number">check_number</string>
    <string name="self_view">self_view</string>
    <string name="surfaceview">surfaceview</string>
    <string name="surfaceview_new">surfaceview_new</string>
    <string name="handler">handler</string>
    <string name="popupwindow">popupwindow</string>
    <string name="toast">toast</string>

    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>

    <!--视频播放-->
    <string name="btn_play">play</string>
    <string name="btn_pasue">pasue</string>
    <string name="btn_stop">stop</string>
    <string name="btn_reset">reset</string>
    <string name="remove">remove</string>
    <!--自定义的播放器-->
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="cancel">cancel</string>
    <!--popuwindow-->
    <string name="show_dialog">show_dialog</string>
    <string name="ok">OK</string>
    <!--eventbus-->
    <string name="eventbus">event bus</string>
    <!--layout-->
    <string name="layout">layout</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="center">center</string>
    <!--other apk-->
    <string name="other_apk">other apk</string>
    <string name="file_manager">file_manager</string>
    <!--md5-->
    <string name="md5">md5</string>
    <string name="md5_enc">md5_enc</string>
    <string name="md5_unenc">md5_unenc</string>
    <!--sort-->
    <string name="sort">sort</string>
    <!--shareprefence-->
    <string name="get">get</string>
    <string name="save">save</string>
    <!--搜索键盘-->
    <string name="keypad">keypad</string>
    <string name="search">搜索</string>
    <string name="searchContent">输入你要的影片资源</string>
    <!--控制Toast 的显示时间-->
    <string name="show_toast">show_toast</string>
    <string name="hide_toast">hide_toast</string>
</resources>
