<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/cnc_btn_up"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_above="@+id/cnc_btn_center"
        android:layout_alignLeft="@+id/cnc_btn_center"
        android:text="@string/up"
        android:gravity="center"
        android:background="@drawable/item_layout_btn_selectot"/>
    <Button
        android:id="@+id/cnc_btn_center"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_centerInParent="true"
        android:text="@string/center"
        android:gravity="center"
        android:background="@drawable/item_layout_btn_selectot"/>
    <Button
        android:id="@+id/cnc_btn_left"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_toLeftOf="@id/cnc_btn_center"
        android:layout_alignBottom="@id/cnc_btn_center"
        android:text="@string/left"
        android:gravity="center"
        android:background="@drawable/item_layout_btn_selectot"/>
    <Button
        android:id="@+id/cnc_btn_right"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_toRightOf="@id/cnc_btn_center"
        android:layout_alignBottom="@id/cnc_btn_center"
        android:text="@string/right"
        android:gravity="center"
        android:background="@drawable/item_layout_btn_selectot"/>
    <Button
        android:id="@+id/cnc_btn_down"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_alignLeft="@id/cnc_btn_center"
        android:layout_below="@+id/cnc_btn_center"
        android:text="@string/down"
        android:gravity="center"
        android:background="@drawable/item_layout_btn_selectot"/>
</RelativeLayout>
