<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    android:background="@drawable/bg_home"
    >

    <Button
        android:id="@+id/cnc_btn_save_shareprefence"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/save_shareprefence"
        android:gravity="center"
        />

    <Button
        android:id="@+id/cnc_btn_read_shareprefence"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_below="@+id/cnc_btn_save_shareprefence"
        android:layout_centerHorizontal="true"
        android:text="@string/read_shareprefence"
        android:gravity="center"
        />

    <Button
        android:id="@+id/cnc_btn_showData"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_below="@id/cnc_btn_read_shareprefence"
        android:layout_centerHorizontal="true"
        android:text="@string/show_data"
        android:gravity="center"
        />

    <Button
        android:id="@+id/cnc_btn_sort_shareprefence"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_below="@+id/cnc_btn_showData"
        android:layout_centerHorizontal="true"
        android:text="@string/sort_shareprefence"
        android:gravity="center"
        />

</RelativeLayout>
