<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    android:background="@drawable/bg_home"
    >

    <Button
        android:id="@+id/cnc_btn_create_database"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_database"
        android:gravity="center"
        />

    <Button
        android:id="@+id/cnc_btn_insert_data"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_below="@+id/cnc_btn_create_database"
        android:layout_centerHorizontal="true"
        android:text="@string/insert_data"
        android:gravity="center"
        />

    <Button
        android:id="@+id/cnc_btn_query_data"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_below="@+id/cnc_btn_insert_data"
        android:layout_centerHorizontal="true"
        android:text="@string/query_data"
        android:gravity="center"
        />
</RelativeLayout>
