<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <Button
       android:id="@+id/cnc_btn_handler_start"
       android:layout_width="@dimen/dimen_200dp"
       android:layout_height="@dimen/dimen_50dp"
       android:layout_marginTop="@dimen/dimen_30dp"
       android:layout_centerHorizontal="true"
       android:text="@string/start"
       android:gravity="center"/>
   <Button
       android:id="@+id/cnc_btn_handler_stop"
       android:layout_width="@dimen/dimen_200dp"
       android:layout_height="@dimen/dimen_50dp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/dimen_30dp"
       android:layout_below="@+id/cnc_btn_handler_start"
       android:text="@string/stop"
       android:gravity="center"
       />
    <Button
        android:id="@+id/cnc_btn_handler_remove"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cnc_btn_handler_stop"
        android:text="@string/remove"
        android:gravity="center"
        />
</RelativeLayout>
